Added the cardshifter-server policy file for when running the server standalone, updated readme and travis configuration to include the cardshifter-server policy file.